# zara-os

./: .env.example  .gitignore  .npmrc  ARCHITECTURE.md  AUTORESEARCH-MANIFEST.md  CHANGELOG.md  CITATIONS.md  CONTEXT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  data-flows.yaml  docker-compose.yml  fleet.yaml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  hallucination-watchdog.yml  hipaa-control-check.yml  security-scan.yml
apps/agents/conductor/: conductor.py
apps/api-core/: pyproject.toml
apps/api-core/app/: main.py
apps/api-core/app/middleware/: audit_log.py
apps/api-core/app/routes/: patients.py
apps/reception/: wrangler.toml
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  (+4 more)
compliance/hipaa/: security-rule-controls.md
database/schema/: 001_users_and_orgs.sql  002_audit_log.sql
docs/: ARCHITECTURE.md  CASE-STUDY-HEALTHCARE-IT-NEWS.md  rj_business_solutions_founders_codex.md
docs/ADRs/: 001-cloudflare-edge-runtime.md  001-fhir-r4-via-medplum-fork.md  002-agent-orchestration-pattern.md  002-aws-eks-for-phi-cloudflare-for-edge.md  003-hipaa-audit-trail-architecture.md  003-pazrm-agent-architecture.md  004-anthropic-via-bedrock-baa.md  004-llm-vendor-selection.md  005-field-level-encryption.md  006-supabase-team-baa.md  007-onc-hti1-certification.md  008-clinical-safety-guardrails.md
docs/DEMOS/: ai-receptionist-walkthrough.md  loom-links.md
scripts/: hipaa-control-check.mjs
tests/probes/: audit-immutability.sql  critical-flows.spec.ts
(+12 files in other folders)
