[project]
name = "zara-os-api-core"
version = "0.0.1"
description = "Zara OS core API — PHI handling on AWS EKS"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "redis==5.2.1",
    "boto3==1.35.92",
    "fhir.resources==8.0.0",
    "structlog==24.4.0",
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi==23.1.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
